# simple-quad

./: CMakeLists.txt  README.md
cmade/: pal_assimp.cmake  pal_duktape.cmake  pal_dump.cmake  pal_glfw.cmake  pal_gtest.cmake  pal_lua.cmake  pal_util.cmake  pal_zlib.cmake
src/: simple-quad.cpp
